kustomize/training/patch-ingress-repository.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alfresco-content-services-alfresco-repository
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: alfresco-content-services-alfresco-repository-hmpps-delius-alfresco-training-green
    nginx.ingress.kubernetes.io/proxy-body-size: "5g"
    nginx.ingress.kubernetes.io/whitelist-source-range: "placeholder"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* "^/metrics(/|$)(.*)") {
        rewrite ^/metrics(/|$)(.*) /alfresco/s/prometheus break;
      }
spec:
  rules:
    - host: hmpps-delius-alfresco-training.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - backend:
              service:
                name: alfresco-content-services-alfresco-repository
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: alfresco-content-services-alfresco-repository
                port:
                  number: 80
            path: /api-explorer
            pathType: Prefix
  tls:
    - hosts:
        - hmpps-delius-alfresco-training.apps.live.cloud-platform.service.justice.gov.uk
